src/argocd/echo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: echo-server
  labels:
    app: echo-server
spec:
  selector:
    app: echo-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
